Fix issue where some post elements were using the wrong border colour in dark mode

--- a/resource/css/post.css
+++ b/resource/css/post.css
@@ -27,9 +27,9 @@ article {
     }
 
     img, pre, table {
-        border: 1px solid var(--color-foreground);
+        border: 1px solid #1A1C1A;
 
-        box-shadow: 0.25rem 0.25rem 0 var(--color-foreground);
+        box-shadow: 0.25rem 0.25rem 0 #1A1C1A;
         box-sizing: border-box;
     }
 
